--- a/docutaskhub/docutaskhub/src/main/resources/application.properties
+++ b/docutaskhub/docutaskhub/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=DocuTask Hub
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.mvc.static-path-pattern=/static/**
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+
+#h2
+spring.h2.console.enabled=true
+
+
+#bd
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=38762
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
