--- a/docutaskhub/docutaskhub/src/main/resources/application.properties
+++ b/docutaskhub/docutaskhub/src/main/resources/application.properties
@@ -15,10 +15,11 @@ spring.mvc.view.suffix=.jsp
 
 #h2
 spring.h2.console.enabled=true
-
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.path=/h2-console
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #bd
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=38762
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
